# RegistrationProject

./: .gitignore  README.md
AAAregistrationV2_build/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
AAAregistrationV2_src/: AAAregister2.cxx  CMakeLists.txt  CMakeLists.txt~
Development/mdsc/: __init__.py
ImageData/AAA-Growth-collaboration copy/: .dropbox  A3D2 J-B 424689-20031229_MESH_01_smooth.stl  (+6 more)
RegistrationDevelopment/: AortaMap.stl  AortaMap.vtp  aaa1.vtp  aaa4.vtp  foo_centerlines.vtp  quickVisualization.py  registered.vtp  testRegistrationV1.py  testcode.py
TestClassBuild_VTK_build/: .cproject  .project  CMakeCache.txt  Makefile  TestOutput2.stl  cmake_install.cmake  fuckshit.stl
TestClassBuild_VTK_src/: ApplyRegistration.cpp  CMakeLists.txt  CommandIterationUpdate.cxx  GetPatchData.cpp  MaterialProperties.cpp  MaterialProperties.cxx  PatchData.cxx  ReadWriteImg.cpp  ReadWriteImg.cxx  VisualizeData.cxx  main.cpp  main.cxx  visualizeData.cpp
TestClassBuild_VTK_src/include/: ApplyRegistration.h  CommandIterationUpdate.h  GetPatchData.h  MaterialProperties.h  PatchData.h  ReadWriteImg.h  Shape.h  VisualizeData.h  visualizeData.h  vtkvmtkCenterlineAttributesFilter.h
VTKpolyDataToITK/: .cproject  .project  CMakeLists.txt  vtkpolyTomesh.cxx
VTKpolyDataToITK_build/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
visualizeRegistration_build/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  visualizeRegistrationV1main
visualizeRegistration_src/: CMakeLists.txt  visualizeRegistrations.cxx
(+33 files in other folders)
